# dot

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: command.rs  git.rs  main.rs
src/command/: init.rs
tests/: cli.rs
